# infinite_arrays_py

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_example.py  setup.py  use_infinite_arrays.py
examples/: __init__.py  basic_usage.py  iqr_example.py
infinite_arrays/: __init__.py  _utils.py  arrays.py  broadcasting.py  cache.py  diagonal.py  infinity.py  iqr.py  ranges.py
tests/: __init__.py  test_basic.py
